ags (1.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented AgsWaverec
	* TODO:JK: implemented audio input properties
	* TODO:JK: implemented AgsWaveWindow, AgsWaveEditor and AgsWaveEdit
	* TODO:JK: implemented AgsLevel
	* implemented AgsDevin
	* implemented AgsJackDevin
	* implemented AgsPulseDevin
	* extended AgsJackServer and AgsJackClient to support AgsJackDevin
	* extended AgsPulseServer, AgsPulseClient and AgsPulsePort to support AgsPulseDevin
	* extended AgsSwitchBufferFlag and AgsClearBuffer to support AgsDevin, AgsJackDevin and AgsPulseDevin
	* use $(docdir) in Makefile.am

ags (1.1.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_synth_generator_compute_extended() to deal with x <= 0.0 using floor()
	* fixed if-statements in ags_synth_generator_compute_extended() not to do array index excess

ags (1.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_synth_generator_compute_extended() to deal with x <= 0.0

ags (1.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_cancel_audio_new() to use properties
	* fixed ags_set_samplerate_new() to use properties

ags (1.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV in ags_synth_generator_compute_extended() because NULL pointer dereference
	* fixed SIGSEGV in ags_oscillator.c caused by wrong assigned array index

ags (1.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_synth_generator_compute_extended()
	* implemented AgsSynthGenerator:delay property
	* implemented needed properties of AgsApplySynth in order to use ags_synth_generator_compute_extended()
	* implemented AgsPositionNotationCursor
	* implemented AgsPositionAutomationCursor
	* refactored AgsApplySynth to use ags_synth_generator_compute_extended()
	* refactored ags_syncsynth_update() and ags_synth_update() to apply triple sync